# jupyter_notebook_sample

./: .gitignore  README.md  pyproject.toml  test.ipynb  test1_nbstripout.ipynb
src/jupyter_notebook_sample/: __init__.py
