[project]
name = "jupyter-notebook-sample"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "SpringMT", email = "makoto.haruyama@zenkigen.jp" }
]
dependencies = [
    "jupyter>=1.0.0",
    "nbstripout>=0.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
